feat: splash screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: mesh
-description: "A new Flutter project."
+description: "Multi-platform multi-mesh device manager"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -50,6 +50,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
+  flutter_native_splash: ^2.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -92,3 +93,17 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_native_splash:
+  # Simple, brand‑neutral splash based on background colors only for now.
+  # You can later add `image` and `image_dark` paths under assets/splash/.
+  color: "#30aa49"
+  color_dark: "#30aa49"
+
+  android: true
+  ios: true
+  web: true
+
+  # Make it feel immersive on launch
+  fullscreen: true
+  android_gravity: center
