--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,6 +46,9 @@ jobs:
       - name: Flutter Pub Get
         run: flutter pub get
 
+      - name: Generate native splash
+        run: dart run flutter_native_splash:create
+
       - name: Build Web
         run: flutter build web --release
 
@@ -79,6 +82,9 @@ jobs:
       - name: Flutter Pub Get
         run: flutter pub get
 
+      - name: Generate native splash
+        run: dart run flutter_native_splash:create
+
       - name: Build APK
         run: flutter build apk --release --build-name "${{ needs.version.outputs.name }}" --build-number "${{ needs.version.outputs.number }}"
 
@@ -111,6 +117,9 @@ jobs:
 
       - name: Flutter Pub Get
         run: flutter pub get
+
+      - name: Generate native splash
+        run: dart run flutter_native_splash:create
 
       - name: Build IPA (no codesign)
         run: flutter build ipa --no-codesign --build-name "${{ needs.version.outputs.name }}" --build-number "${{ needs.version.outputs.number }}"
