--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Generate version asset
+        run: bash scripts/version.sh
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -73,6 +76,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Generate version asset
+        run: bash scripts/version.sh
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -108,6 +114,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Generate version asset
+        run: bash scripts/version.sh
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
