--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          submodules: recursive
 
       - name: Compute version from git describe (and ensure base tag 0.0.1)
         id: ver
@@ -45,6 +46,22 @@ jobs:
         with:
           channel: stable
           cache: true
+
+      - name: Install protoc (Ubuntu)
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y protobuf-compiler
+
+      - name: Install protoc (macOS)
+        if: runner.os == 'macOS'
+        run: brew install protobuf
+
+      - name: Activate Dart protoc plugin
+        run: dart pub global activate protoc_plugin
+
+      - name: Generate Dart protobufs
+        run: bash scripts/gen_protos.sh
 
       - name: Flutter Pub Get
         run: flutter pub get
@@ -75,6 +92,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          submodules: recursive
 
       - name: Generate version asset
         run: bash scripts/version.sh
@@ -84,6 +102,22 @@ jobs:
         with:
           channel: stable
           cache: true
+
+      - name: Install protoc (Ubuntu)
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y protobuf-compiler
+
+      - name: Install protoc (macOS)
+        if: runner.os == 'macOS'
+        run: brew install protobuf
+
+      - name: Activate Dart protoc plugin
+        run: dart pub global activate protoc_plugin
+
+      - name: Generate Dart protobufs
+        run: bash scripts/gen_protos.sh
 
       - name: Flutter Pub Get
         run: flutter pub get
@@ -114,6 +148,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          submodules: recursive
 
       - name: Generate version asset
         run: bash scripts/version.sh
@@ -123,6 +158,22 @@ jobs:
         with:
           channel: stable
           cache: true
+
+      - name: Install protoc (Ubuntu)
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y protobuf-compiler
+
+      - name: Install protoc (macOS)
+        if: runner.os == 'macOS'
+        run: brew install protobuf
+
+      - name: Activate Dart protoc plugin
+        run: dart pub global activate protoc_plugin
+
+      - name: Generate Dart protobufs
+        run: bash scripts/gen_protos.sh
 
       - name: Flutter Pub Get
         run: flutter pub get
@@ -149,6 +200,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          submodules: recursive
 
       - name: Generate version asset
         run: bash scripts/version.sh
@@ -158,6 +210,22 @@ jobs:
         with:
           channel: stable
           cache: true
+
+      - name: Install protoc (Ubuntu)
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y protobuf-compiler
+
+      - name: Install protoc (macOS)
+        if: runner.os == 'macOS'
+        run: brew install protobuf
+
+      - name: Activate Dart protoc plugin
+        run: dart pub global activate protoc_plugin
+
+      - name: Generate Dart protobufs
+        run: bash scripts/gen_protos.sh
 
       - name: Flutter Pub Get
         run: flutter pub get
