feat: using versioning for flutter

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -48,6 +48,8 @@ jobs:
         run: |
           flutter build web \
             --release \
+            --build-name "${{ steps.ver.outputs.name }}" \
+            --build-number "${{ steps.ver.outputs.number }}" \
             --base-href "/${{ env.REPO_NAME }}/"
 
       - name: Upload Pages artifact
