--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          submodules: recursive
 
       - name: Generate version asset
         run: |
@@ -50,6 +51,12 @@ jobs:
         with:
           channel: stable
           cache: true
+
+      - name: Install buf
+        uses: bufbuild/buf-setup-action@v1
+
+      - name: Generate Protobufs (Dart)
+        run: bash scripts/gen_protos.sh
 
       - name: Flutter Pub Get
         run: flutter pub get
@@ -95,6 +102,12 @@ jobs:
           channel: stable
           cache: true
 
+      - name: Install buf
+        uses: bufbuild/buf-setup-action@v1
+
+      - name: Generate Protobufs (Dart)
+        run: bash scripts/gen_protos.sh
+
       - name: Flutter Pub Get
         run: flutter pub get
 
@@ -139,6 +152,12 @@ jobs:
           channel: stable
           cache: true
 
+      - name: Install buf
+        uses: bufbuild/buf-setup-action@v1
+
+      - name: Generate Protobufs (Dart)
+        run: bash scripts/gen_protos.sh
+
       - name: Flutter Pub Get
         run: flutter pub get
 
@@ -178,6 +197,12 @@ jobs:
         with:
           channel: stable
           cache: true
+
+      - name: Install buf
+        uses: bufbuild/buf-setup-action@v1
+
+      - name: Generate Protobufs (Dart)
+        run: bash scripts/gen_protos.sh
 
       - name: Flutter Pub Get
         run: flutter pub get
