--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -29,9 +29,10 @@ jobs:
         with:
           channel: stable
 
-      - name: Install buf
-        uses: bufbuild/buf-setup-action@v1
-
+      - uses: bufbuild/buf-action@v1
+        with:
+          token: ${{ secrets.BUF_TOKEN }}
+          setup_only: true
       - name: Generate Protobufs (Dart)
         run: bash scripts/gen_protos.sh
 
