--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -28,6 +28,8 @@ analyzer:
   exclude:
     # Exclude problematic/generated nanopb files that reference missing WKTs
     - lib/generated/meshtastic/nanopb*.dart
+    # Ignore lints in generated protobuf files
+    - lib/generated/meshtastic/meshtastic/*.dart
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
