--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   yaml: ^3.1.2
   # Dart Protobuf runtime for generated Meshtastic protos
   protobuf: ^6.0.0
+  fixnum: ^1.1.0
 
 dev_dependencies:
   flutter_test:
