--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
   flutter_native_splash: ^2.4.1
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -113,3 +114,20 @@ flutter_native_splash:
   # Make it feel immersive on launch
   fullscreen: true
   android_gravity: center
+
+# App icon generation configuration
+flutter_launcher_icons:
+  image_path: assets/icon.png
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  adaptive_icon_background: "#000000"
+  adaptive_icon_foreground: assets/icon.png
+  web:
+    generate: true
+    image_path: assets/icon.png
+    background_color: "#000000"
+    theme_color: "#000000"
+  macos:
+    generate: true
+    image_path: assets/icon.png
