--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -11,8 +11,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: stable
           channel: stable
+          cache: true
       - name: Pub get
         run: flutter pub get
       - name: Run web smoke (widget) tests
@@ -32,8 +32,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: stable
           channel: stable
+          cache: true
       - name: Pub get
         run: flutter pub get
       - name: Make scripts executable
@@ -61,8 +61,8 @@ jobs:
           java-version: '17'
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: stable
           channel: stable
+          cache: true
       - name: Install Android SDK tools
         run: sudo apt-get update -y && sudo apt-get install -y libglu1-mesa
       - name: Pub get
