--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -15,8 +15,8 @@ jobs:
         id: flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "stable"
-          channel: "stable"
+          channel: stable
+          cache: true
       - name: Flutter doctor
         run: flutter doctor -v
 
@@ -27,8 +27,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: stable
           channel: stable
+          cache: true
       - name: Pub get
         run: flutter pub get
       - name: Run web smoke (widget) tests
@@ -49,8 +49,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: stable
           channel: stable
+          cache: true
       - name: Pub get
         run: flutter pub get
       - name: Make scripts executable
@@ -79,8 +79,8 @@ jobs:
           java-version: '17'
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: stable
           channel: stable
+          cache: true
       - name: Install Android SDK tools
         run: sudo apt-get update -y && sudo apt-get install -y libglu1-mesa
       - name: Pub get
