--- a/macos/Runner/DebugProfile.entitlements
+++ b/macos/Runner/DebugProfile.entitlements
@@ -8,6 +8,9 @@
 	<true/>
 	<key>com.apple.security.network.server</key>
 	<true/>
+    <!-- Allow outgoing network connections (e.g., map tiles over HTTPS) -->
+    <key>com.apple.security.network.client</key>
+    <true/>
     <!-- Allow Bluetooth access for CoreBluetooth (BLE) -->
     <key>com.apple.security.device.bluetooth</key>
     <true/>
