--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   # Dart Protobuf runtime for generated Meshtastic protos
   protobuf: ^6.0.0
   fixnum: ^1.1.0
+  share_plus: ^10.0.2
+  cross_file: ^0.3.4+1
 
 dev_dependencies:
   flutter_test:
