--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   shared_preferences: ^2.2.3
   flutter_map: ^8.2.2
   latlong2: ^0.9.1
+  flutter_map_marker_cluster: ^8.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
