--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   flutter_native_splash: ^2.4.1
   flutter_launcher_icons: ^0.13.1
+  mockito: ^5.6.1
+  build_runner: ^2.10.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
