--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -270,10 +270,9 @@ jobs:
           name: ${{ needs.version.outputs.tag_name }}
           body_path: CHANGELOG_RELEASE.md
           files: |
-            dist/web-*/*.zip
-            dist/android-*/*.apk
-            dist/android-*/*.aab
-            dist/ios-*/*.ipa
-            dist/macos-*/*.zip
+            dist/**/**/*.zip
+            dist/**/**/*.apk
+            dist/**/**/*.aab
+            dist/**/**/*.ipa
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
