--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   fixnum: ^1.1.0
   share_plus: ^10.0.2
   cross_file: ^0.3.4+1
+  flutter_libserialport: ^0.6.0
 
 dev_dependencies:
   flutter_test:
