--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_libserialport: ^0.6.0
   flutter_bloc: ^9.1.1
   equatable: ^2.0.7
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
