--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   flutter_bloc: ^9.1.1
   equatable: ^2.0.7
   url_launcher: ^6.3.2
+  flutter_platform_widgets: ^9.0.0
+  rxdart: ^0.28.0
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
